--- a/icomoon/style.css
+++ b/icomoon/style.css
@@ -1,19 +1,18 @@
 @font-face {
-  font-family: "icomoon";
-  src: url("fonts/icomoon.eot?3lhvkq");
-  src: url("fonts/icomoon.eot?3lhvkq#iefix") format("embedded-opentype"),
-    url("fonts/icomoon.ttf?3lhvkq") format("truetype"),
-    url("fonts/icomoon.woff?3lhvkq") format("woff"),
-    url("fonts/icomoon.svg?3lhvkq#icomoon") format("svg");
+  font-family: 'icomoon';
+  src:  url('fonts/icomoon.eot?3lhvkq');
+  src:  url('fonts/icomoon.eot?3lhvkq#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?3lhvkq') format('truetype'),
+    url('fonts/icomoon.woff?3lhvkq') format('woff'),
+    url('fonts/icomoon.svg?3lhvkq#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
-[class^="icon-"],
-[class*=" icon-"] {
+[class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: "icomoon" !important;
+  font-family: 'icomoon' !important;
   speak: never;
   font-style: normal;
   font-weight: normal;
