--- a/output.css
+++ b/output.css
@@ -687,6 +687,10 @@ video {
   margin-top: -0.25rem;
 }
 
+.-mt-2 {
+  margin-top: -0.5rem;
+}
+
 .mb-5 {
   margin-bottom: 1.25rem;
 }
@@ -709,6 +713,10 @@ video {
 
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.-mt-10 {
+  margin-top: -2.5rem;
 }
 
 .flex {
@@ -1020,6 +1028,11 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .font-bold {
