--- a/output.css
+++ b/output.css
@@ -652,6 +652,10 @@ video {
   top: 1.25rem;
 }
 
+.right-4 {
+  right: 1rem;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -666,6 +670,10 @@ video {
 
 .col-span-7 {
   grid-column: span 7 / span 7;
+}
+
+.m-auto {
+  margin: auto;
 }
 
 .mx-auto {
@@ -755,15 +763,6 @@ video {
   height: 100%;
 }
 
-.h-auto {
-  height: auto;
-}
-
-.h-fit {
-  height: -moz-fit-content;
-  height: fit-content;
-}
-
 .\!w-full {
   width: 100% !important;
 }
@@ -792,12 +791,36 @@ video {
   width: 100%;
 }
 
+.w-\[\] {
+  width: ;
+}
+
+.w-\[90vw\] {
+  width: 90vw;
+}
+
 .max-w-\[170px\] {
   max-width: 170px;
 }
 
 .max-w-full {
   max-width: 100%;
+}
+
+.max-w-\[\] {
+  max-width: ;
+}
+
+.max-w-\[90\%\] {
+  max-width: 90%;
+}
+
+.max-w-\[90\] {
+  max-width: 90;
+}
+
+.max-w-\[90vw\] {
+  max-width: 90vw;
 }
 
 .flex-1 {
@@ -934,10 +957,6 @@ video {
   border-radius: 0.5rem;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
 .border {
   border-width: 1px;
 }
@@ -1020,20 +1039,8 @@ video {
   padding-bottom: 2.5rem;
 }
 
-.pt-24 {
-  padding-top: 6rem;
-}
-
-.pb-5 {
-  padding-bottom: 1.25rem;
-}
-
 .pt-20 {
   padding-top: 5rem;
-}
-
-.pb-7 {
-  padding-bottom: 1.75rem;
 }
 
 .text-center {
