--- a/output.css
+++ b/output.css
@@ -652,10 +652,6 @@ video {
   top: 1.25rem;
 }
 
-.right-4 {
-  right: 1rem;
-}
-
 .z-10 {
   z-index: 10;
 }
@@ -670,10 +666,6 @@ video {
 
 .col-span-7 {
   grid-column: span 7 / span 7;
-}
-
-.m-auto {
-  margin: auto;
 }
 
 .mx-auto {
@@ -779,6 +771,10 @@ video {
   width: 2.25rem;
 }
 
+.w-\[90\%\] {
+  width: 90%;
+}
+
 .w-\[90px\] {
   width: 90px;
 }
@@ -791,12 +787,16 @@ video {
   width: 100%;
 }
 
-.w-\[\] {
-  width: ;
+.w-\[80\%\] {
+  width: 80%;
 }
 
-.w-\[90vw\] {
-  width: 90vw;
+.w-\[85\%\] {
+  width: 85%;
+}
+
+.w-\[\] {
+  width: ;
 }
 
 .max-w-\[170px\] {
@@ -805,22 +805,6 @@ video {
 
 .max-w-full {
   max-width: 100%;
-}
-
-.max-w-\[\] {
-  max-width: ;
-}
-
-.max-w-\[90\%\] {
-  max-width: 90%;
-}
-
-.max-w-\[90\] {
-  max-width: 90;
-}
-
-.max-w-\[90vw\] {
-  max-width: 90vw;
 }
 
 .flex-1 {
@@ -939,6 +923,10 @@ video {
 
 .self-center {
   align-self: center;
+}
+
+.overflow-auto {
+  overflow: auto;
 }
 
 .overflow-hidden {
