--- a/output.css
+++ b/output.css
@@ -689,10 +689,6 @@ video {
   grid-column: span 7 / span 7;
 }
 
-.col-span-2 {
-  grid-column: span 2 / span 2;
-}
-
 .\!my-5 {
   margin-top: 1.25rem !important;
   margin-bottom: 1.25rem !important;
@@ -832,10 +828,6 @@ video {
   height: 100%;
 }
 
-.min-h-screen {
-  min-height: 100vh;
-}
-
 .\!w-full {
   width: 100% !important;
 }
@@ -937,7 +929,7 @@ video {
 
 @keyframes marquee {
   0% {
-    transform: translateX(-200%);
+    transform: translateX(-100%);
   }
 
   100% {
@@ -975,10 +967,6 @@ video {
 
 .flex-wrap {
   flex-wrap: wrap;
-}
-
-.content-center {
-  align-content: center;
 }
 
 .items-center {
@@ -1035,10 +1023,6 @@ video {
 
 .gap-7 {
   gap: 1.75rem;
-}
-
-.gap-10 {
-  gap: 2.5rem;
 }
 
 .gap-8 {
@@ -1185,16 +1169,20 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.pb-36 {
-  padding-bottom: 9rem;
+.pb-52 {
+  padding-bottom: 13rem;
 }
 
 .pt-12 {
   padding-top: 3rem;
 }
 
-.pb-52 {
-  padding-bottom: 13rem;
+.pb-36 {
+  padding-bottom: 9rem;
+}
+
+.pb-28 {
+  padding-bottom: 7rem;
 }
 
 .text-left {
@@ -1586,10 +1574,6 @@ body {
     gap: 1.25rem;
   }
 
-  .md\:gap-8 {
-    gap: 2rem;
-  }
-
   .md\:bg-transparent {
     background-color: transparent;
   }
@@ -1612,6 +1596,16 @@ body {
   .md\:py-6 {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
+  }
+
+  .md\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .md\:py-1 {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
   }
 
   .md\:pb-36 {
